unpackaged/main/default/objects/Drug__c/Drug__c.object-meta.xml
<CustomObject>
    <description>The Main Drug Table</description>
    <label>Drug</label>
    <nameField>
        <label>Drug Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>