unpackaged/main/default/objects/Drug__c/fields/Action_Needed_for_Re_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Action_Needed_for_Re_Enrollment__c</fullName>
    <label>Action Needed for Re-Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>