unpackaged/main/default/objects/Drug__c/fields/Active_CPA__c.field-meta.xml
<CustomField>
    <fullName>Active_CPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active CPA</label>
    <type>Checkbox</type>
</CustomField>