unpackaged/main/default/objects/Drug__c/fields/Annual_Max__c.field-meta.xml
<CustomField>
    <fullName>Annual_Max__c</fullName>
    <label>Annual Max</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>