unpackaged/main/default/objects/Drug__c/fields/Coding_Level__c.field-meta.xml
<CustomField>
    <fullName>Coding_Level__c</fullName>
    <label>Coding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCPCS</fullName>
            </value>
            <value>
                <fullName>HCPCS + NDC</fullName>
            </value>
            <value>
                <fullName>HCPCS + DX</fullName>
            </value>
            <value>
                <fullName>ICD -10</fullName>
                <isActive>false</isActive>
                <label>ICD -10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>