unpackaged/main/default/objects/Drug__c/fields/Copay_Assistance_Available__c.field-meta.xml
<CustomField>
    <fullName>Copay_Assistance_Available__c</fullName>
    <label>CPA Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>