unpackaged/main/default/objects/Drug__c/fields/CPA_Change_Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>CPA_Change_Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPA Change! - Needs Review</label>
    <type>Checkbox</type>
</CustomField>