unpackaged/main/default/objects/Drug__c/fields/CPA_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CPA_Last_Updated__c</fullName>
    <label>CPA Last Updated</label>
    <type>Date</type>
</CustomField>