unpackaged/main/default/objects/Drug__c/fields/CPA_LookUp__c.field-meta.xml
<CustomField>
    <fullName>CPA_LookUp__c</fullName>
    <label>CPA Lookup URL</label>
    <type>Url</type>
</CustomField>