unpackaged/main/default/objects/Drug__c/fields/CPA_Notes__c.field-meta.xml
<CustomField>
    <fullName>CPA_Notes__c</fullName>
    <label>CPA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>