unpackaged/main/default/objects/Drug__c/fields/Date_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Updated__c</fullName>
    <label>Date Last Updated</label>
    <type>Date</type>
</CustomField>