unpackaged/main/default/objects/Drug__c/fields/Drug_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Brand_Name__c</fullName>
    <label>Drug Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>