unpackaged/main/default/objects/Drug__c/fields/Enrollment_Req__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated nightly by Zitter</inlineHelpText>
    <label>Enrollment Req</label>
    <type>Checkbox</type>
</CustomField>