unpackaged/main/default/objects/Drug__c/fields/Enrollment_URL__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_URL__c</fullName>
    <label>Enrollment URL</label>
    <type>Url</type>
</CustomField>