unpackaged/main/default/objects/Drug__c/fields/GPI_14__c.field-meta.xml
<CustomField>
    <fullName>GPI_14__c</fullName>
    <label>GPI 14</label>
    <length>15</length>
    <type>Text</type>
</CustomField>