unpackaged/main/default/objects/Drug__c/fields/Help_Line__c.field-meta.xml
<CustomField>
    <fullName>Help_Line__c</fullName>
    <label>Help Line</label>
    <type>Phone</type>
</CustomField>