unpackaged/main/default/objects/Drug__c/fields/ICD_10_CM__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_CM__c</fullName>
    <label>ICD-10 CM</label>
    <length>25</length>
    <type>Text</type>
</CustomField>