unpackaged/main/default/objects/Drug__c/fields/ICD_10_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_Code__c</fullName>
    <label>ICD-10 Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>