unpackaged/main/default/objects/Drug__c/fields/J_Code__c.field-meta.xml
<CustomField>
    <fullName>J_Code__c</fullName>
    <label>HCPCS Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>