unpackaged/main/default/objects/Drug__c/fields/J_Code_Match_Exception__c.field-meta.xml
<CustomField>
    <fullName>J_Code_Match_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCPCS Code Match Exception</label>
    <type>Checkbox</type>
</CustomField>