unpackaged/main/default/objects/Drug__c/fields/MA_Details__c.field-meta.xml
<CustomField>
    <fullName>MA_Details__c</fullName>
    <label>MA Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>