unpackaged/main/default/objects/Drug__c/fields/Manufacturer_Requires_Household_Details__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Requires_Household_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacturer Requires Household Details</label>
    <type>Checkbox</type>
</CustomField>