unpackaged/main/default/objects/Drug__c/fields/Member_Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Member_Copay_Amount__c</fullName>
    <inlineHelpText>The flat copay amount for this med charged by the insurance.</inlineHelpText>
    <label>Member Copay Amount</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>