unpackaged/main/default/objects/Drug__c/fields/Member_Minimum_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>Member_Minimum_Per_Claim__c</fullName>
    <label>Member Minimum Per Claim</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>