unpackaged/main/default/objects/Drug__c/fields/Monthly_Max__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Max__c</fullName>
    <label>Monthly Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>