unpackaged/main/default/objects/Drug__c/fields/NDC_Match_Exception__c.field-meta.xml
<CustomField>
    <fullName>NDC_Match_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDC Match Exception</label>
    <type>Checkbox</type>
</CustomField>