unpackaged/main/default/objects/Drug__c/fields/Program_Eligibility_Details__c.field-meta.xml
<CustomField>
    <fullName>Program_Eligibility_Details__c</fullName>
    <label>Program Eligibility Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>