unpackaged/main/default/objects/Drug__c/fields/Program_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Expiration_Date__c</fullName>
    <label>Program Expiration Date</label>
    <type>Date</type>
</CustomField>