unpackaged/main/default/objects/Drug__c/fields/Program_Fax__c.field-meta.xml
<CustomField>
    <fullName>Program_Fax__c</fullName>
    <label>CPA Program Fax</label>
    <type>Phone</type>
</CustomField>