unpackaged/main/default/objects/Drug__c/fields/Program_URL__c.field-meta.xml
<CustomField>
    <fullName>Program_URL__c</fullName>
    <label>Program URL</label>
    <type>Url</type>
</CustomField>