unpackaged/main/default/objects/Drug__c/fields/Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation__c</fullName>
    <label>Pronunciation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>