unpackaged/main/default/objects/Drug__c/fields/PRx_Enrollment_Process__c.field-meta.xml
<CustomField>
    <fullName>PRx_Enrollment_Process__c</fullName>
    <label>PRx Enrollment Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>