unpackaged/main/default/objects/Drug__c/fields/PRx_Help_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>PRx_Help_Line_Number__c</fullName>
    <label>PRx Help Line Number</label>
    <type>Phone</type>
</CustomField>