unpackaged/main/default/objects/Drug__c/fields/PRx_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>PRx_Program_Description__c</fullName>
    <label>PRx Program Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>Non-Essential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>