unpackaged/main/default/objects/Drug__c/fields/PRx_Re_Enrollment_Process__c.field-meta.xml
<CustomField>
    <fullName>PRx_Re_Enrollment_Process__c</fullName>
    <label>PRx Re-Enrollment Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>