unpackaged/main/default/objects/Drug__c/fields/PRx_Website__c.field-meta.xml
<CustomField>
    <fullName>PRx_Website__c</fullName>
    <label>PRx Website</label>
    <type>Url</type>
</CustomField>