unpackaged/main/default/objects/Drug__c/fields/Re_Enrollment_Date_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Re_Enrollment_Date_Eligibility__c</fullName>
    <label>Re-Enrollment Date - Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>