unpackaged/main/default/objects/Drug__c/fields/Re_Enrollment_Date_Funds__c.field-meta.xml
<CustomField>
    <fullName>Re_Enrollment_Date_Funds__c</fullName>
    <label>Re-Enrollment Date - Funds</label>
    <type>TextArea</type>
</CustomField>