unpackaged/main/default/objects/Drug__c/fields/Re_Imbursement_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Re_Imbursement_Deadline__c</fullName>
    <label>Re-Imbursement Deadline</label>
    <type>TextArea</type>
</CustomField>