unpackaged/main/default/objects/Drug__c/fields/Reimbursement_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Deadline__c</fullName>
    <label>Reimbursement Deadline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>