unpackaged/main/default/objects/Drug__c/fields/Reimbursement_Process__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Process__c</fullName>
    <label>Reimbursement Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>