unpackaged/main/default/objects/Drug__c/fields/Reimbursement_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Submitter__c</fullName>
    <label>Reimbursement Submitter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>MBR</fullName>
            </value>
            <value>
                <fullName>HCP or MBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>