unpackaged/main/default/objects/Drug__c/fields/Reimbursement_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Vehicle__c</fullName>
    <label>Reimbursement Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>