unpackaged/main/default/objects/Drug__c/fields/Renewel_Details__c.field-meta.xml
<CustomField>
    <fullName>Renewel_Details__c</fullName>
    <label>Renewel Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>