unpackaged/main/default/objects/Drug__c/fields/Renewel_Method__c.field-meta.xml
<CustomField>
    <fullName>Renewel_Method__c</fullName>
    <label>Renewel Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>