unpackaged/main/default/objects/Drug__c/fields/Retroactive_Backdates__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_Backdates__c</fullName>
    <inlineHelpText>A look back period during which members with commercial insurance who have received medication may be eligible for retro copay assistance as determined by the copay assistance program.</inlineHelpText>
    <label>Retroactive Backdates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>