unpackaged/main/default/objects/Drug__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <inlineHelpText>Turn Around Time</inlineHelpText>
    <label>TAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
            </value>
            <value>
                <fullName>3 Days</fullName>
            </value>
            <value>
                <fullName>5 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>