unpackaged/main/default/objects/Drug__c/fields/Therapy_Class__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Class__c</fullName>
    <label>Therapy Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>