unpackaged/main/default/objects/Drug__c/fields/Underpayment_Process__c.field-meta.xml
<CustomField>
    <fullName>Underpayment_Process__c</fullName>
    <label>Underpayment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each Fill</fullName>
            </value>
            <value>
                <fullName>Partial &amp; Exhausted</fullName>
            </value>
            <value>
                <fullName>Second Fill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>