unpackaged/main/default/objects/Drug__c/fields/When_Re_Enrollment_Action_Is_Needed__c.field-meta.xml
<CustomField>
    <fullName>When_Re_Enrollment_Action_Is_Needed__c</fullName>
    <label>When Re-Enrollment Action Is Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>