unpackaged/main/default/objects/Drug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Coding_Level__c</columns>
    <columns>J_Code__c</columns>
    <columns>Therapy_Class__c</columns>
    <columns>Member_Copay_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>